# talos-recruitment

./: .gitignore  README.md
src/moving/: CMakeLists.txt  package.xml
src/moving/include/: config.hpp  target_manager.hpp  turtle_controller.hpp  turtle_id_generator.hpp  turtle_mover.hpp  turtle_pen.hpp  turtle_spawn.hpp  turtle_state.hpp
src/moving/src/: main.cpp  target_manager.hpp  task1.cpp  turtle_controller.cpp  turtle_controller.hpp  turtle_mover.hpp
